--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,9 @@ MANIFEST
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
+program.log
+.program.log
+/program.log
 
 # Unit test / coverage reports
 htmlcov/
